# FlyStress

./: FS-shake-record-storeData.py  File_Search_CJ.py  FlyStress-v4-6 (1).py  LICENSE  README.md  ST-MPU-Settings.py  mpu6050-read-temp.py
CCC/: GUI.py  GUI_3.py  GUI_M4.py  GUI_MPU_1.py  dectect_flies.py  still_frame.py
FS_GUI/: FlyStress-v4-3.py  FlyStress-v4-6 (1).py
MPU6050/: MPU6050-acc-v2.py  MPU6050-temp-v2.py  mpu6050-read-acc.py
RK_CrossPlat/: RecordKeeper_CP.mlapp
Recording/: RecordKeeping.py  RecordKeeping_CP.py  RecordKeeping_CP_v1-2.py
Recording/FlyStressCapture/: app_state.json  main.cpp
Recording/Raspi_SVBCam/: CMakeLists.txt
ShakeTest/: FS-SDR-S.py  FS-SDR-v2.py  shakeT-and-MPUAcc.py  shake_test_keith.py
